ingress/todo/global.ingress.yml
#---------------------------------------------------------------
#                         INGRESS
#---------------------------------------------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: sentry
  name: sentry-global-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - sentry.co
      secretName: sentry-secret-tls
  rules:
    - host: sentry.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sentry-web
                port:
                  number: 80
---
